--- a/package.json
+++ b/package.json
@@ -3,22 +3,30 @@
   "scripts": {
     "start": "roadhog server",
     "build": "roadhog build",
-    "lint": "eslint --ext .js src test"
+    "lint": "eslint --ext .js src test",
+    "precommit": "npm run lint"
   },
   "engines": {
     "install-node": "6.11.1"
   },
   "dependencies": {
-    "antd-mobile": "^2.1.2",
-    "babel-plugin-import": "^1.6.2",
+    "antd-mobile": "^2.2.13",
+    "babel-plugin-import": "^1.6.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-runtime": "^6.9.2",
-    "classnames": "^2.2.5",
-    "dva": "^2.1.0",
+    "classnames": "^2.2.6",
+    "dva": "^2.4.0",
+    "dva-loading": "^2.0.1",
     "fastclick": "^1.0.6",
-    "jssha": "^1.6.2",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "i18next": "^8.4.3",
+    "i18next-browser-languagedetector": "^2.0.0",
+    "jssha": "^2.3.1",
+    "moment": "^2.22.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.2.0",
+    "react-cookies": "^0.1.0",
+    "react-dom": "^16.0.1",
+    "react-i18next": "^8.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
